techblog_app/static/techblog_app/css/custom-text-editor.css
:root {
    --black: #212529;
    --light-gray: #f9fafb;
}

/* -------------------------- */
/* quill editor css setting */
/* -------------------------- */
.ql-editor {
    min-height: 200px;
}

.ql-formats svg {
    opacity: .8;
}

.ql-picker-label {
    color: #5c5c5c;
}

.ql-toolbar {
    border: 1px solid #ced4da !important;
    border-radius: 0.4em 0.4em 0 0;
}

.ql-container {
    font-size: 2rem;
    border: 1px solid #ced4da !important;
    border-radius: 0 0 6px 6px;
    border-top: 0 !important;
}

.ql-container:nth-child(n) {
    font-size: 1rem;
}

/* quill pre element */
pre {
    color: var(--light-gray);
    border-radius: 3px;
    background-color: #353535;
    padding: .8rem;
}

/* code color in pre */
.hljs-keyword {
    color: #ff723a !important;
}

.hljs-string {
    color: #76b850 !important;
}

blockquote {
    background-color: rgb(241, 237, 237);
    margin: 0 1rem !important;
    padding: 0 .6rem 0 1rem !important;
    border-left: 8px solid rgb(125, 91, 170) !important;
    word-wrap: break-word;
}

.ql-editor img,
article img {
    border-radius: 3px;
    max-width: 100%;
    margin: .2rem;
    background-color: #ced4da;
}


/* work-around to fix the z-index  of success message going under the profile image in the profile page*/
.messages-container {
    z-index: 100;
}

.profile-pic-container {
    z-index: -1;

}



/* to limit the for width for login register page.... */
.edit-profile-max-width {
    max-width: 660px
}

.form-max-width {
    max-width: 560px
}

